@@ -1,5 +1,5 @@
 Release;Date;Downloads;
-0.6.1;March  2, 2011;115;#============>
+0.6.1;March  2, 2011;122;#============>
 0.6;February 22, 2011;108;#===========>
 0.5.3;February 11, 2011;69;#=======>
 0.5.2;January 12, 2011;107;#===========>
@@ -9,4 +9,4 @@ Release;Date;Downloads;
 0.1.2;November  9, 2010;80;#========>
 0.1.1;November  8, 2010;92;#=========>
 0.1.0;November  7, 2010;112;#===========>
-Total; ;945;
+Total; ;952;
