@@ -5,5 +5,5 @@
 <p>See <a href="{{ pathto("getprody") }}">Getting ProDy</a> for installing 
    instructions, or install it with: 
    <pre>easy_install -U ProDy</pre>   
-Total of 945 downloads (see <a href="{{ pathto("reports/pypi_statistics") }}">details</a>).
+Total of 952 downloads (see <a href="{{ pathto("reports/pypi_statistics") }}">details</a>).
 </p>
