@@ -1718,7 +1718,6 @@ class PCA(NMABase):
         self._eigvals = values[which]
         self._array = vectors[:, which]
         self._vars = self._eigvals
-        self._trace = self._vars.sum()
         self._n_modes = len(self._eigvals)
         self._modes = [None] * self._n_modes
         LOGGER.debug('{0:d} modes were calculated in {1:.2f}s.'
